--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dependencies": {
         "axios": "^0.26.1",
         "express": "^4.17.3",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "mustache": "^4.2.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
