--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A Devlog website",
     "main": "index.js",
     "scripts": {
-        "run": "node src",
+        "start": "node src",
         "serve": "nodemon src",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
